t-rex 19.06.2016 21:15:20 +0200 - build 4717

1. Mantis#2467: Застряёт регэксп поиск с заменой в редакторе

2. Не собиралось почему то в VC2015 update 3 (вроде баг в последнем)

drkns 18.06.2016 18:09:29 +0200 - build 4716

1. Уточнение 4715.

drkns 18.06.2016 13:55:55 +0200 - build 4715

1. С форума: неверная прорисовка часов с учетом региональных настроек.

drkns 18.06.2016 12:52:50 +0200 - build 4714

1. С форума: после копирования или переноса исчезают значки жестких ссылок на пассивной панели.

drkns 18.06.2016 11:51:33 +0200 - build 4713

1. Обход бага выхода из полноэкранного режима в Windows 10.

drkns 17.06.2016 22:38:32 +0200 - build 4712

1. Частичный откат предыдущих экспериментов с режимами консоли.

2. WindowMode расширен: добавлены два дополнительных параметра StickyX (по умолчанию true) и StickyY (по умолчанию false),
   определяющие, к каким осям должен подстраиваться размер (и где, соответственно, должны отсутствовать полосы прокрутки).

drkns 17.06.2016 17:44:53 +0200 - build 4711

1. Пара глюков WindowMode.

drkns 17.06.2016 15:12:33 +0200 - build 4710

1. Восстановим работоспособность в Win2k.

w17 16.06.2016 19:27:33 +0300 - build 4709

1. Снова уточнение 4697.
   Отслеживание переключения полноэкранного режима Win10 с настройкой консоли: [ ] Wrap text output on resize
   Восстановление оригинального размера консольного буфера при выходе
   Не должен ломаться ConEmu для System.WindowMode = false

zg 15.06.2016 22:27:05 +0200 - build 4708

1. с форума: ShiftEnd и ShiftHome в панелях тормозят.

drkns 14.06.2016 18:31:09 +0200 - build 4707

1. Системные ассоциации, у которых "associated program" - bat или cmd, запускались в отдельном окне.

drkns 13.06.2016 19:32:18 +0200 - build 4706

1. С форума: проблема с панелями Fullscreen view

zg 12.06.2016 21:04:46 +0200 - build 4705

1. после 4685 визуальные проблемы со скроллингом в редакторе мышкой.

drkns 12.06.2016 16:32:43 +0200 - build 4704

1. Ещё раз 0003254: