@@ -1,3 +1,7 @@
+drkns 20.06.2016 00:15:19 +0200 - build 4718
+
+1. #0003257: (far 3.0.4700.x64) Исключительная ситуация во Viewer при поиске HEX-значений
+
 t-rex 19.06.2016 21:15:20 +0200 - build 4717
 
 1. Mantis#2467: Застряёт регэксп поиск с заменой в редакторе
